# CPP-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
txt/: data.txt  orders.txt
txts/: data.txt  orders.txt
